--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<div class="indexCont">
 			<div class="indexInfo">
 				<h1>В общем и целом о сайте</h1>
-				Данный сайт посвящён разнообразным красивым местам нашей планеты, начиная со снежных горных вершин, заканчивая лаыфвф434453
+				Данный сайт посвящён разнообразным красивым местам нашей планеты, начиная со снежных горных вершин, заканчивая лазурными пляжами. 
 			</div>
 
 			<div class="footer">
