--- a/forest.html
+++ b/forest.html
@@ -30,7 +30,7 @@
 			</div>
 
 			<div class="footer">
-				<span class="beachBy">by design Xsufu</span>
+				<span class="by">by design Xsufu</span>
 			</div>
 		</div>		
 	</body>
