--- a/beach.html
+++ b/beach.html
@@ -11,7 +11,7 @@
 		<div class="container">
 			<div id="beachHeader" class="header">
 				<ul class="first_list">
-					<li class="main_li" onclick="alert('Вы уже находитесь на данной странице')">Пляжи</li>
+					<li class="main_li">Пляжи</li>
 					<li class="main_li"><a href="mountains.html">Горы</a></li>
 					<li id="spn" class="main_li"><a href="index.html"><b>ГЛАВНАЯ</b></a></li>
 					<li class="main_li"><a href="forest.html">Заповедники</a></li>
