--- a/forest.html
+++ b/forest.html
@@ -14,7 +14,7 @@
 					<li class="main_li"><a href="beach.html">Пляжи</a></li>
 					<li class="main_li"><a href="mountains.html">Горы</a></li>
 					<li id="spn" class="main_li"><a href="index.html"><b>ГЛАВНАЯ</b></a></li>
-					<li class="main_li" onclick="alert('Вы уже находитесь на этой странице')">Заповедники</li>
+					<li class="main_li">Заповедники</li>
 					<li class="main_li"><a href="lakes.html">Озёра</a></li>
 				</ul>
 			</div>
