--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				<ul class="first_list">
 					<li class="main_li"><a href="beach.html">Пляжи</a></li>
 					<li class="main_li"><a href="mountains.html">Горы</a></li>
-					<li id="spn" class="main_li" onclick="alert('Вы уже находитесь на этой странице')"><b>ГЛАВНАЯ</b></li>
+					<li id="spn" class="main_li"><b>ГЛАВНАЯ</b></li>
 					<li class="main_li"><a href="forest.html">Заповедники</a></li>
 					<li class="main_li"><a href="lakes.html">Озёра</a></li>
 				</ul>
@@ -27,7 +27,7 @@
 			</div>
 
 			<div class="footer">
-				<span class="by">by design Xsufu</span>
+				<span class="by" onclick="alert('А зачем так делать???')">by design Xsufu</span>
 			</div>
 		</div>		
 	</body>
