--- a/lakes.html
+++ b/lakes.html
@@ -15,7 +15,7 @@
 					<li class="main_li"><a href="mountains.html">Горы</a></li>
 					<li id="spn" class="main_li"><a href="index.html"><b>ГЛАВНАЯ</b></a></li>
 					<li class="main_li"><a href="forest.html">Заповедники</a></li>
-					<li class="main_li" onclick="alert('Вы уже находитесь на данной стрнаице')">Озёра</li>
+					<li class="main_li">Озёра</li>
 				</ul>
 			</div>
 			
