--- a/mountains.html
+++ b/mountains.html
@@ -12,7 +12,7 @@
 			<div id="mountainsHeader" class="header">
 				<ul class="first_list">
 					<li class="main_li"><a href="beach.html">Пляжи</a></li>
-					<li class="main_li" onclick="alert('Вы уже находитесь на данной стрнаице')">Горы</li>
+					<li class="main_li">Горы</li>
 					<li id="spn" class="main_li"><a href="index.html"><b>ГЛАВНАЯ</b></a></li>
 					<li class="main_li"><a href="forest.html">Заповедники</a></li>
 					<li class="main_li"><a href="lakes.html">Озёра</a></li>
