--- a/beach.html
+++ b/beach.html
@@ -20,7 +20,8 @@
 			</div>
 
 			<din class="content">
-				<h2></h2>
+				<h4>Уайтхэвен-Бич, остров Уитсанди, <a href="https://www.skyscanner.ru/flights-to/ppp/cheap-flights-to-whitsunday-coast-(proserpine)-airport.html" target="_blank" rel="noreferrer noopener">Австралия</a></h4>
+				
 			</din>	
 		</div>
 
