--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 		<div class="indexCont">
 			<div class="indexInfo">
 				<h1>В общем и целом о сайте</h1>
-				Данный сайт посвящён разнообразным красивым местам нашей планеты, начиная со снежных горных вершин, заканчивая лазурными пляжами. 
+				<span class="MainText">Данный сайт посвящён разнообразным красивым местам нашей планеты, начиная со снежных горных вершин, заканчивая лазурными пляжами. <br> <br> Отдых имеет особую роль в нашей жизни: отдыхая, мы набираемся сил, находим вдохновение и можем врываться в новый цикл однообразной жизни заново. Отдыхать можно и сидя у телевизора, но от такого отдыха вряд ли станет лучше. Необходимо переодически выходить на природу и путешестовать. Именно для этого и создан данный сайт: показать красоту нашей планеты и места, куда можно поехать за уединением и спокойствием. <br> <br>
+				Тут всё довольно просто - выбери что тебе больше нравится из меню наверху и тыкни на слово. На странице ты найдёшь фотографию и расположение данного места, а также немного слов или интересных фактов о нём. <br><br>
+				Мир удивителен. Этот сайт отображает лишь малую часть всех земных красот, которые есть на нашей планете. Но даже такое небольшое количество разнообразных мест может послужить началом твоего нового и удивительного путешествия. Так что все только в твоих руках!</span>
 			</div>
 
 			<div class="footer">
