Вроде бы последнее
1) Доработал все страницы: вставил картинки и текст
2) На каждой странице есть гиперыссылка и конфирм

--- a/beach.html
+++ b/beach.html
@@ -20,8 +20,14 @@
 			</div>
 
 			<din class="content">
-				<h4>Уайтхэвен-Бич, остров Уитсанди, <a href="https://www.skyscanner.ru/flights-to/ppp/cheap-flights-to-whitsunday-coast-(proserpine)-airport.html" target="_blank" rel="noreferrer noopener">Австралия</a></h4>
-				
+				<h3>Уайтхэвен-Бич, остров Уитсанди, <a class="targ" href="https://www.skyscanner.ru/flights-to/ppp/cheap-flights-to-whitsunday-coast-(proserpine)-airport.html" target="_blank" rel="noreferrer noopener">Австралия</a></h3>
+				<span class="text">Мелкий, как мука, и хрустящий, как снег, песок превращает пляж Уайтхэвен в австралийский филиал рая. И хотя архипелаг Уитсанди включает 74 живописных острова, с ослепительно-белым кварцевым пляжем повезло только самому крупному из них.
+
+				На флагманском острове Уитсанди, как и на большинстве других, расположены национальные парки, поэтому гостиниц здесь нет, а туристы приезжают с экскурсией, чтобы заодно сходить в трекинг, заняться дайвингом или устроить пикник на берегу. К вечеру пляж пустеет, но если не захочется с ним расставаться, можно заночевать в палатке прямо под звездами.
+
+				<br><b>Когда ехать</b>: Вода в Коралловом море Тихого океана теплее всего с декабря по апрель, а с июня по ноябрь меньше всего дождей. Приезжать на пляж лучше во время отлива: именно тогда песок выглядит так, будто его перемешали огромной ложкой.
+
+				<br><b>Как добраться</b>: Ближайшие аэропорты находятся на острове Гамильтон и в Просерпайне. С Гамильтона к островам добираются на лодках, а из Просерпайна нужно сначала доехать на автобусе до города Эйрли-Бич, а после — на пароме отправиться к островам.</span>
 			</din>	
 		</div>
 
