--- a/forest.html
+++ b/forest.html
@@ -20,7 +20,14 @@
 			</div>
 			
 			<din class="forestContent">
-				<h2></h2>
+				<h3>Национальный парк Сноудония в Великобритании</h3>
+				<span class="text">Особенностью парка является наличие огромного количества пешеходных троп для пешеходов. Если вы хотите прогуляться по незабываемым местам девственной природы, то Сноудония это то, что вам нужно. <br><br>
+
+				Здесь обитает огромное количество диких животных. Их привлекают горные ущелья и красивые леса национального парка. Здесь также имеются <a onclick="return confirm('Внимаение! Переход по внешней ссылке. Вы уверены, что хотите прейти?')" href="https://basetop.ru/samyie-krasivyie-vodopadyi-mira-foto/">красивые водопады</a>, которые раскинулись на всей территории Кембрийских гор. <br><br>
+
+				За заповедником хорошо присматривают. Его управлением занимаются представители местных властей совместно с центральным уэльским правительством. <br><br>
+
+				Леса национального парка можно отнести к смешанному лиственному типу. Наиболее распространенным деревьями здесь являются дум, береза, рябина, орешник и ясень. Некоторое время назад часть земель использовались для сельского хозяйства. Здесь занимались земледелием и скотоводством. Но в настоящее время все территории снова зарастают деревьями и природа постепенно восстанавливается.</span>
 			</din>
 		</div>
 
