--- a/lakes.html
+++ b/lakes.html
@@ -20,7 +20,10 @@
 			</div>
 			
 			<din class="lakesContent">
-				<h2></h2>
+				<h3>Байкал</h3>
+				<span class="text">Это одно из <a onclick="return confirm('Внимаение! Переход по внешней ссылке. Вы уверены, что хотите прейти?')" href="https://basetop.ru/samyie-krasivyie-mesta-rossii-41-foto-i-nazvaniya/">самых красивых мест России</a> и мира. А еще Байкал — самое глубокое озеро на Земле — в некоторых местах оно достигает глубины 1642 метра. Оно расплоложено между не менее красивых гор, а его чистая вода населена множеством видов фауны, которые не встречаются более нигде в мире. Например, озеро является домом для уникальной пресноводной байкальской нерпы — реликта третичной эпохи, каким-то чудом сохранившимся до наших дней. <br><br>
+				Зимой озеро становится настоящей страной чудес, с рыбалкой, горячими источниками, и сверхъестественно-прозрачным льдом, превращающим Байкал в крупнейший в мире естественный каток. <br><br>
+				</span>
 			</din>
 		</div>
 
