--- a/mountains.html
+++ b/mountains.html
@@ -20,7 +20,9 @@
 			</div>
 			
 			<din class="mountContent">
-				<h2></h2>
+				<h3><a onclick="return confirm('Внимаение! Переход по внешней ссылке. Вы уверены, что хотите прейти?')" href="https://yandex.ru/maps/geo/respublika_altay/53000057/?ll=86.895789%2C50.900154&source=wizgeo&utm_medium=maps-desktop&utm_source=serp&z=7">Алтай</a></h3>
+				<span class="text">Кто хоть раз был на Алтае, видел бирюзовые воды стремительно бегущей Катуни и прекрасной, извивающейся между горными хребтами Бии, ехал по живописному Чуйскому тракту, поднимался на перевал Чике-Таман или Кату-Ярык и любовался оттуда снежными горными вершинами, кое-где затянутыми густыми облаками, тот обязательно вернётся сюда снова. Алтай расположен на границе сразу четырёх стран: России, Монголии, Китая и Казахстана. <br><br>
+				Название «Алтай», по наиболее распространённой версии, означает «Золотые горы». Здесь находятся несколько заповедников (где встречаются животные и растения, которых нет больше нигде в мире), десятки маральников, а также знаменитое плато Укок – объект всемирного наследия ЮНЕСКО, – именно в этих местах обнаружено огромное количество древних археологических памятников (в своё время Алтай был «перекрёстком» передвижения различных кочевых племён). Сердцем Алтая является Белуха (высота 4509 м) – одна из самых красивых вершин на нашей планете, покорить которую приезжают люди со всего мира.</span>
 			</din>
 		</div>
 
