--- a/beach.html
+++ b/beach.html
@@ -20,7 +20,7 @@
 			</div>
 
 			<din class="content">
-				<h3>Уайтхэвен-Бич, остров Уитсанди, <a class="targ" href="https://www.skyscanner.ru/flights-to/ppp/cheap-flights-to-whitsunday-coast-(proserpine)-airport.html" target="_blank" rel="noreferrer noopener">Австралия</a></h3>
+				<h3>Уайтхэвен-Бич, остров Уитсанди, <a onclick="return confirm('Внимаение! Переход по внешней ссылке. Вы уверены, что хотите прейти?')" class="targ" href="https://www.skyscanner.ru/flights-to/ppp/cheap-flights-to-whitsunday-coast-(proserpine)-airport.html" target="_blank" rel="noreferrer noopener">Австралия</a></h3>
 				<span class="text">Мелкий, как мука, и хрустящий, как снег, песок превращает пляж Уайтхэвен в австралийский филиал рая. И хотя архипелаг Уитсанди включает 74 живописных острова, с ослепительно-белым кварцевым пляжем повезло только самому крупному из них.
 
 				На флагманском острове Уитсанди, как и на большинстве других, расположены национальные парки, поэтому гостиниц здесь нет, а туристы приезжают с экскурсией, чтобы заодно сходить в трекинг, заняться дайвингом или устроить пикник на берегу. К вечеру пляж пустеет, но если не захочется с ним расставаться, можно заночевать в палатке прямо под звездами.
@@ -32,8 +32,7 @@
 		</div>
 
 		<div class="cont">
-			<div class="info">
-				
+			<div class="info">	
 			</div>
 
 			<div class="footer">
