--- a/forest.html
+++ b/forest.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Вокруг света - заповедники</title>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/ForestStyle.css">
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
 	<link rel="shortcut icon" href="img/favicon.png" type="image/png">
 </head>
@@ -11,11 +11,17 @@
 		<div class="container">
 			<div id="forestHeader" class="forestHeader">
 				<ul class="first_list">
-					<li class="main_li"><a href="beach.html">Пляжи</a></li>
-					<li class="main_li"><a href="mountains.html">Горы</a></li>
-					<li id="spn" class="main_li"><a href="index.html"><b>ГЛАВНАЯ</b></a></li>
-					<li class="main_li">Заповедники</li>
-					<li class="main_li"><a href="lakes.html">Озёра</a></li>
+					<a href="beach.html"><li class="main_li">Пляжи</li></a>
+					<a href="mountains.html"><li class="main_li">Горы</li></a>
+					<a href="index.html"><li id="spn" class="main_li"><b>ГЛАВНАЯ</b></li></a>
+					<li class="main_li">Заповедники
+						<ul class="strange_ul">
+							<a href="forest_2.html"><li class="hover_li">Заповедник Фьордланд</li></a>
+							<a href="forest_3.html"><li class="hover_li">Сарек, Швеция</li></a>
+							<a href="forest_4.html"><li class="hover_li">Банф, Канада</li></a>
+						</ul>
+					</li>
+					<a href="lakes.html"><li class="main_li">Озёра</li></a>
 				</ul>
 			</div>
 			
@@ -33,7 +39,8 @@
 
 		<div class="cont">
 			<div class="forestInfo">
-				
+				<img src="img/zap.jpg" alt="" class="Img1">
+			 	<img src="img/zap_2.jpg" alt="" class="Img2">
 			</div>
 
 			<div class="footer">
