--- a/index.html
+++ b/index.html
@@ -11,11 +11,38 @@
 		<div class="container">
 			<div id="indexHeader" class="indexHeader">
 				<ul class="first_list">
-					<li class="main_li"><a href="beach.html">Пляжи</a></li>
-					<li class="main_li"><a href="mountains.html">Горы</a></li>
-					<li id="spn" class="main_li"><b>ГЛАВНАЯ</b></li>
-					<li class="main_li"><a href="forest.html">Заповедники</a></li>
-					<li class="main_li"><a href="lakes.html">Озёра</a></li>
+					<li id="spn" class="hideLi"> <!--<b><span class="TeSh">ГЛАВНАЯ</b></span> <img class="icon" src="img/icons_22.png" alt="">--> <img class="icon" src="https://img.icons8.com/ios-glyphs/40/000000/drag-list-down.png"/>
+						<ul class="second_list">
+							<a href="beach.html"><li id="BeachLi" class="main_li"><span class="ShLe">Пляжи</span>
+								<ul class="vert_ul_Beach">
+									<a href="beach_2.html"><li class="vert_li">Грейс-Бэй, остров Провиденсиалес</li></a>
+									<a href="beach_3.html"><li class="vert_li">Пляж Капуташ</li></a>
+									<a href="beach_4.html"><li class="vert_li">Майя-Бэй, остров Пхи-Пхи-Ле</li></a>
+								</ul>
+							</li></a>
+							<a href="mountains.html"><li class="main_li"><span class="ShLe">Горы</span>
+								<ul class="vert_ul_Mount">
+									<a href="mountains_2.html"><li class="vert_li">Доломитовые Альпы</li></a>
+									<a href="mountains_3.html"><li class="vert_li">Татры</li></a>
+									<a href="mountains_4.html"><li class="vert_li">Пиренеи</li></a>
+								</ul>
+							</li></a>
+							<a href="forest.html"><li class="main_li"><span class="ShRi">Заповедники</span>
+								<ul class="vert_ul_Forest">
+									<a href="forest_2.html"><li class="vert_li">Заповедник Фьордланд</li></a>
+									<a href="forest_3.html"><li class="vert_li">Сарек, Швеция</li></a>
+									<a href="forest_4.html"><li class="vert_li">Банф, Канада</li></a>
+								</ul>
+							</li></a>
+							<a href="lakes.html"><li class="main_li"><span class="ShRi">Озёра</span>
+								<ul class="vert_ul_Lakes">
+									<a href="lakes_2.html"><li class="vert_li">Озеро Комо, Италия</li></a>
+									<a href="lakes_3.html"><li class="vert_li">Озеро Накуру, Кения</li></a>
+									<a href="lakes_4.html"><li class="vert_li">Морейн, Канада</li></a>
+								</ul>
+							</li></a>
+						</ul>
+					</li>
 				</ul>
 			</div>
 		</div>
