--- a/beach.html
+++ b/beach.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Вокруг света - пляжи</title>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/BeachStyle.css">
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
 	<link rel="shortcut icon" href="img/favicon.png" type="image/png">
 </head>
@@ -11,16 +11,23 @@
 		<div class="container">
 			<div id="beachHeader" class="header">
 				<ul class="first_list">
-					<li class="main_li">Пляжи</li>
-					<li class="main_li"><a href="mountains.html">Горы</a></li>
-					<li id="spn" class="main_li"><a href="index.html"><b>ГЛАВНАЯ</b></a></li>
-					<li class="main_li"><a href="forest.html">Заповедники</a></li>
-					<li class="main_li"><a href="lakes.html">Озёра</a></li>
+					<li id="" class="main_li">Пляжи
+						<ul class="hover_ul">
+							<a href="beach_2.html"><li class="hover_li">Грейс-Бэй, остров Провиденсиалес</li></a>
+							<a href="beach_3.html"><li class="hover_li">Пляж Капуташ</li></a>
+							<a href="beach_4.html"><li class="hover_li">Майя-Бэй, остров Пхи-Пхи-Ле</li></a>
+						</ul>
+					</li>
+					<a href="mountains.html"><li class="main_li">Горы</li></a>
+					<a href="index.html"><li id="spn" class="main_li"><b>ГЛАВНАЯ</b></li></a>
+					<a href="forest.html"><li class="main_li">Заповедники</li></a>
+					<a href="lakes.html"><li class="main_li">Озёра</li></a>
 				</ul>
 			</div>
 
 			<din class="content">
-				<h3>Уайтхэвен-Бич, остров Уитсанди, <a onclick="return confirm('Внимаение! Переход по внешней ссылке. Вы уверены, что хотите прейти?')" class="targ" href="https://www.skyscanner.ru/flights-to/ppp/cheap-flights-to-whitsunday-coast-(proserpine)-airport.html" target="_blank" rel="noreferrer noopener">Австралия</a></h3>
+				<h3>Уайтхэвен-Бич, остров Уитсанди, <a onclick="return confirm('Внимаение! Переход по внешней ссылке. Вы уверены, что хотите перейти?')" class="targ" href="https://www.skyscanner.ru/flights-to/ppp/cheap-flights-to-whitsunday-coast-(proserpine)-airport.html" target="_blank" rel="noreferrer noopener">Австралия</a></h3>
+				
 				<span class="text">Мелкий, как мука, и хрустящий, как снег, песок превращает пляж Уайтхэвен в австралийский филиал рая. И хотя архипелаг Уитсанди включает 74 живописных острова, с ослепительно-белым кварцевым пляжем повезло только самому крупному из них.
 
 				На флагманском острове Уитсанди, как и на большинстве других, расположены национальные парки, поэтому гостиниц здесь нет, а туристы приезжают с экскурсией, чтобы заодно сходить в трекинг, заняться дайвингом или устроить пикник на берегу. К вечеру пляж пустеет, но если не захочется с ним расставаться, можно заночевать в палатке прямо под звездами.
@@ -33,6 +40,8 @@
 
 		<div class="cont">
 			<div class="info">	
+				<img src="img/beach.jpg" alt="" class="BeachImg1">
+			 	<img src="img/beach_2.jpg" alt="" class="BeachImg2">
 			</div>
 
 			<div class="footer">
