--- a/lakes.html
+++ b/lakes.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Вокруг света - озёра</title>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/LakesStyle.css">
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
 	<link rel="shortcut icon" href="img/favicon.png" type="image/png">
 </head>
@@ -11,11 +11,17 @@
 		<div class="container">
 			<div id="lakesHeader" class="header">
 				<ul class="first_list">
-					<li class="main_li"><a href="beach.html">Пляжи</a></li>
-					<li class="main_li"><a href="mountains.html">Горы</a></li>
-					<li id="spn" class="main_li"><a href="index.html"><b>ГЛАВНАЯ</b></a></li>
-					<li class="main_li"><a href="forest.html">Заповедники</a></li>
-					<li class="main_li">Озёра</li>
+					<a href="beach.html"><li class="main_li">Пляжи</li></a>
+					<a href="mountains.html"><li class="main_li">Горы</li></a>
+					<li id="spn" class="main_li"><a href="index.html"><b>ГЛАВНАЯ</b></li></a>
+					<a href="forest.html"><li class="main_li">Заповедники</li></a>
+					<li class="main_li">Озёра
+						<ul class="hover_ul">
+							<a href="lakes_2.html"><li class="hover_li">Озеро Комо, Италия</li></a>
+							<a href="lakes_3.html"><li class="hover_li">Озеро Накуру, Кения</li></a>
+							<a href="lakes_4.html"><li class="hover_li">Морейн, Канада</li></a>
+						</ul>
+					</li>
 				</ul>
 			</div>
 			
@@ -29,7 +35,8 @@
 
 		<div class="cont">
 			<div class="lakesInfo">
-				
+				<img src="img/baikal.jpg" alt="" class="Img1">
+			 	<img src="img/baikal_2.jpg" alt="" class="Img2">
 			</div>
 
 			<div class="footer">
