--- a/mountains.html
+++ b/mountains.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Вокруг света - горы</title>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/MountStyle.css">
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
 	<link rel="shortcut icon" href="img/favicon.png" type="image/png">
 </head>
@@ -11,11 +11,17 @@
 		<div class="container">
 			<div id="mountainsHeader" class="header">
 				<ul class="first_list">
-					<li class="main_li"><a href="beach.html">Пляжи</a></li>
-					<li class="main_li">Горы</li>
-					<li id="spn" class="main_li"><a href="index.html"><b>ГЛАВНАЯ</b></a></li>
-					<li class="main_li"><a href="forest.html">Заповедники</a></li>
-					<li class="main_li"><a href="lakes.html">Озёра</a></li>
+					<a href="beach.html"><li class="main_li">Пляжи</li></a>
+					<li class="main_li">Горы
+						<ul class="hover_ul">
+							<a href="mountains_2.html"><li class="hover_li">Доломитовые Альпы</li></a>
+							<a href="mountains_3.html"><li class="hover_li">Татры</li></a>
+							<a href="mountains_4.html"><li class="hover_li">Пиренеи</li></a>
+						</ul>
+					</li>
+					<a href="index.html"><li id="spn" class="main_li"><b>ГЛАВНАЯ</b></li></a>
+					<a href="forest.html"><li class="main_li">Заповедники</li></a>
+					<a href="lakes.html"><li class="main_li">Озёра</li></a>
 				</ul>
 			</div>
 			
@@ -28,7 +34,8 @@
 
 		<div class="cont">
 			<div class="mountInfo">
-				
+				<img src="img/altaj.jpg" alt="" class="Img1">
+			 	<img src="img/altaj_2.jpg" alt="" class="Img2">
 			</div>
 
 			<div class="footer">
