--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div class="container">
 			<div id="indexHeader" class="indexHeader">
 				<ul class="first_list">
-					<li id="spn" class="hideLi"> <!--<b><span class="TeSh">ГЛАВНАЯ</b></span> <img class="icon" src="img/icons_22.png" alt="">--> <img class="icon" src="https://img.icons8.com/ios-glyphs/40/000000/drag-list-down.png"/>
+					<li id="spn" class="hideLi"> <img class="icon" src="https://img.icons8.com/ios-glyphs/40/000000/drag-list-down.png"/>
 						<ul class="second_list">
 							<a href="beach.html"><li id="BeachLi" class="main_li"><span class="ShLe">Пляжи</span>
 								<ul class="vert_ul_Beach">
